[gd_scene load_steps=2 format=3 uid="uid://cboss001"]

[ext_resource type="Script" path="res://enemy/BossEnemy.gd" id="1_boss"]

[node name="BossEnemy" type="CharacterBody2D" groups=["enemies", "bosses"]]
collision_layer = 4
collision_mask = 1
script = ExtResource("1_boss")
speed = 80.0
chase_speed = 100.0
max_health = 10
health = 10
boss_health = 10
boss_scale = 3.5

[node name="DetectionCircle" type="Polygon2D" parent="."]
z_index = -5
color = Color(0.8, 0.2, 1.0, 0.15)

[node name="Visual" type="Node2D" parent="."]

[node name="BodyShadow" type="ColorRect" parent="Visual"]
offset_left = -24.0
offset_top = -18.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(0.4, 0.1, 0.6, 1)

[node name="Body" type="ColorRect" parent="Visual"]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 21.0
color = Color(0.8, 0.2, 1.0, 1)

[node name="BodyDetail" type="ColorRect" parent="Visual"]
offset_left = -21.0
offset_top = -21.0
offset_right = 21.0
offset_bottom = 18.0
color = Color(0.9, 0.3, 1.0, 1)

[node name="Chest" type="ColorRect" parent="Visual"]
offset_left = -15.0
offset_top = -12.0
offset_right = 15.0
offset_bottom = 12.0
color = Color(0.7, 0.15, 0.9, 1)

[node name="ShoulderLeft" type="ColorRect" parent="Visual"]
offset_left = -27.0
offset_top = -18.0
offset_right = -21.0
offset_bottom = -6.0
color = Color(0.6, 0.1, 0.8, 1)

[node name="ShoulderRight" type="ColorRect" parent="Visual"]
offset_left = 21.0
offset_top = -18.0
offset_right = 27.0
offset_bottom = -6.0
color = Color(0.6, 0.1, 0.8, 1)

[node name="Eye1Outer" type="ColorRect" parent="Visual"]
offset_left = -18.0
offset_top = -15.0
offset_right = -6.0
offset_bottom = -3.0
color = Color(0.05, 0.05, 0.05, 1)

[node name="Eye2Outer" type="ColorRect" parent="Visual"]
offset_left = 6.0
offset_top = -15.0
offset_right = 18.0
offset_bottom = -3.0
color = Color(0.05, 0.05, 0.05, 1)

[node name="Eye1" type="ColorRect" parent="Visual"]
offset_left = -15.0
offset_top = -12.0
offset_right = -9.0
offset_bottom = -6.0
color = Color(0.9, 0.9, 0.1, 1)

[node name="Eye2" type="ColorRect" parent="Visual"]
offset_left = 9.0
offset_top = -12.0
offset_right = 15.0
offset_bottom = -6.0
color = Color(0.9, 0.9, 0.1, 1)

[node name="EyeHighlight" type="ColorRect" parent="Visual"]
offset_left = -13.5
offset_top = -10.5
offset_right = -10.5
offset_bottom = -7.5
color = Color(1, 1, 1, 0.9)

[node name="EyeHighlight2" type="ColorRect" parent="Visual"]
offset_left = 10.5
offset_top = -10.5
offset_right = 13.5
offset_bottom = -7.5
color = Color(1, 1, 1, 0.9)

[node name="Mouth" type="ColorRect" parent="Visual"]
offset_left = -6.0
offset_top = 6.0
offset_right = 6.0
offset_bottom = 12.0
color = Color(0.3, 0.15, 0.15, 1)

[node name="AlertIndicator" type="Label" parent="."]
offset_left = -8.0
offset_top = -80.0
offset_right = 8.0
offset_bottom = -60.0
theme_override_colors/font_color = Color(0.9, 0.3, 1.0, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
text = "!"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
